.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Notification_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Notification Type</label>
    <pluralLabel>Notification Types</pluralLabel>
</CustomObject>